--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [
     "RESTful",
@@ -20,6 +20,8 @@
     "nodemon": "^1.12.1"
   },
   "dependencies": {
+    "@angular/complier-cli":"^1.4.2",
+    "@angular/compiler": "^4.2.4",
     "bcryptjs": "*",
     "body-parser": "*",
     "cors": "*",
