--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "ehappy-api",
+  "name": "serverapp",
   "version": "1.0.0",
   "description": "RESTful API for eHappy",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "ng": "ng",
+    "start": "node server.js",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
+  "private": true,
   "keywords": [
     "RESTful",
     "API",
@@ -20,7 +26,8 @@
     "nodemon": "^1.12.1"
   },
   "dependencies": {
-    "@angular/complier-cli":"^1.4.2",
+    "@angular/cli": "1.4.2",
+    "@angular/compiler-cli": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "bcryptjs": "*",
     "body-parser": "*",
@@ -33,5 +40,9 @@
     "mongoose": "^4.12.4",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1"
+  },
+  "engines": {
+    "node":"6.11.3",
+    "npm":"5.6.0"
   }
 }
